--- a/package.json
+++ b/package.json
@@ -11,6 +11,28 @@
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fusioncharts/angular2-fusioncharts"
+  },
+  "author": {
+    "name": "FusionCharts",
+    "email": "support@fusioncharts.com"
+  },
+  "contributors": [
+    {
+      "name": "Rohit Kumar",
+      "email": "rohit.kr001@gmail.com",
+      "url": "https://github.com/rohitkr"
+    }
+  ],
+  "keywords": [
+    "angular"
+  ],
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/fusioncharts/angular2-fusioncharts/issues"
+  },
   "dependencies": {
     "@angular/common": "4.1.3",
     "@angular/compiler": "4.1.3",
@@ -25,6 +47,7 @@
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
+    "angular2-fusioncharts": "^1.0.2-rc.5",
     "angularfire2": "^5.0.0-rc.3",
     "cordova-android": "^6.2.3",
     "cordova-plugin-bluetooth-serial": "^0.4.7",
@@ -36,11 +59,13 @@
     "cordova-plugin-whitelist": "^1.3.2",
     "firebase": "^4.6.0",
     "ionic-angular": "3.6.0",
+    "ng2-charts": "^1.6.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "promise-polyfill": "^6.0.2",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
+    "fusioncharts": "^3.12.1",
     "zone.js": "0.8.12"
   },
   "devDependencies": {
