--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "myBalance",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": {
+    "name": "FusionCharts",
+    "email": "support@fusioncharts.com"
+  },
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
@@ -10,6 +13,24 @@
     "lint": "ionic-app-scripts lint",
     "ionic:build": "ionic-app-scripts build",
     "ionic:serve": "ionic-app-scripts serve"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fusioncharts/angular2-fusioncharts"
+  },
+  "contributors": [
+    {
+      "name": "Rohit Kumar",
+      "email": "rohit.kr001@gmail.com",
+      "url": "https://github.com/rohitkr"
+    }
+  ],
+  "keywords": [
+    "angular"
+  ],
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/fusioncharts/angular2-fusioncharts/issues"
   },
   "dependencies": {
     "@angular/common": "4.1.3",
@@ -20,21 +41,27 @@
     "@angular/http": "4.1.3",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
+    "@ionic-native/bluetooth-serial": "^4.2.1",
     "@ionic-native/core": "3.12.1",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
-    "angularfire2": "^5.0.0-rc.3",
-    "cordova-plugin-console": "^1.0.5",
-    "cordova-plugin-device": "^1.1.4",
+    "angular2-fusioncharts": "^1.0.2-rc.5",
+    "angularfire2": "^5.0.0-rc.4",
+    "cordova-android": "^6.2.3",
+    "cordova-plugin-bluetooth-serial": "^0.4.7",
+    "cordova-plugin-console": "^1.1.0",
+    "cordova-plugin-device": "^1.1.6",
     "cordova-plugin-fcm": "^2.1.2",
     "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "^2.2.2",
-    "cordova-plugin-whitelist": "^1.3.1",
-    "firebase": "^4.6.0",
+    "cordova-plugin-statusbar": "^2.2.3",
+    "cordova-plugin-whitelist": "^1.3.2",
+    "firebase": "^4.6.2",
+    "fusioncharts": "^3.12.1",
     "ionic-angular": "3.6.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "ng2-charts": "^1.6.0",
     "promise-polyfill": "^6.0.2",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
@@ -47,13 +74,17 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-fcm": {},
-      "ionic-plugin-keyboard": {},
-      "cordova-plugin-whitelist": {},
       "cordova-plugin-console": {},
-      "cordova-plugin-statusbar": {},
       "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {}
-    }
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-whitelist": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-bluetooth-serial": {},
+      "cordova-plugin-fcm": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
