--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@ionic-native/core": "3.12.1",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
-    "@ionic/storage": "2.0.1",
+    "@ionic/storage": "^2.0.1",
     "angular2-fusioncharts": "^1.0.2-rc.5",
     "angularfire2": "^5.0.0-rc.4",
     "cordova-android": "^6.2.3",
@@ -56,6 +56,7 @@
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.2.3",
     "cordova-plugin-whitelist": "^1.3.2",
+    "cordova-sqlite-storage": "^2.1.2",
     "firebase": "^4.6.2",
     "fusioncharts": "^3.12.1",
     "ionic-angular": "3.6.0",
@@ -81,7 +82,8 @@
       "cordova-plugin-whitelist": {},
       "ionic-plugin-keyboard": {},
       "cordova-plugin-bluetooth-serial": {},
-      "cordova-plugin-fcm": {}
+      "cordova-plugin-fcm": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "android"
